--- a/templates/migration-job.yaml
+++ b/templates/migration-job.yaml
@@ -3,9 +3,8 @@ kind: Job
 metadata:
   name: sre-app-migrate
   annotations:
-    "helm.sh/hook": pre-install,pre-upgrade,post-install
+    "helm.sh/hook": pre-install,pre-upgrade
     "helm.sh/hook-weight": "0"
-    "helm.sh/hook-delete-policy": hook-failed
 spec:
   template:
     spec:
