--- a/templates/configmap.yml
+++ b/templates/configmap.yml
@@ -2,6 +2,10 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: sre-app-config
+  namespace: {{ .Release.Namespace }}
+  annotations:
+    "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook-weight": "0" 
 data:
   DATABASE_URL: "{{ .Values.env.DATABASE_URL }}"
   PHX_HOST: "{{ .Values.env.PHX_HOST }}"
