--- a/templates/migration-job.yaml
+++ b/templates/migration-job.yaml
@@ -4,7 +4,7 @@ metadata:
   name: sre-app-migrate
   annotations:
     "helm.sh/hook": pre-install,pre-upgrade
-    "helm.sh/hook-weight": "0"
+    "helm.sh/hook-weight": "1"
 spec:
   template:
     spec:
@@ -18,14 +18,6 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy | default "IfNotPresent" }}
           command: ["/bin/sh", "-c", "./sre_technical_challenge eval 'Application.ensure_all_started(:sre_technical_challenge); Ecto.Migrator.run(SreTechnicalChallenge.Repo, :up, all: true)'"]
-          env:
-            - name: DATABASE_URL
-              value: "{{ .Values.env.DATABASE_URL }}"
-            - name: PHX_HOST
-              value: "{{ .Values.env.PHX_HOST }}"
-            - name: SECRET_KEY_BASE
-              value: "{{ .Values.env.SECRET_KEY_BASE }}"
-            - name: POOL_SIZE
-              value: "{{ .Values.env.POOL_SIZE }}"
-            - name: PORT
-              value: "{{ .Values.env.PORT }}"
+          envFrom:
+            - configMapRef:
+                name: sre-app-config
