--- a/templates/configmap.yml
+++ b/templates/configmap.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: sre-app-config
+  name: {{ include "sre-app.fullname" . }}-config
   namespace: {{ .Release.Namespace }}
   annotations:
     "helm.sh/hook": pre-install,pre-upgrade
