--- a/templates/migration-job.yaml
+++ b/templates/migration-job.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: sre-app-migrate
+  name: {{ include "sre-app.fullname" . }}-migrate
   annotations:
     "helm.sh/hook": pre-install,pre-upgrade
     "helm.sh/hook-weight": "1"
@@ -20,4 +20,6 @@ spec:
           command: ["/bin/sh", "-c", "./sre_technical_challenge eval 'Application.ensure_all_started(:sre_technical_challenge); Ecto.Migrator.run(SreTechnicalChallenge.Repo, :up, all: true)'"]
           envFrom:
             - configMapRef:
-                name: sre-app-config
+                name: {{ include "sre-app.fullname" . }}-config
+            - secretRef:
+                name: {{ include "sre-app.fullname" . }}-secrets
